started on script.js, added api for calling weather information and also started the function to call for data

--- a/index.html
+++ b/index.html
@@ -20,13 +20,8 @@
                             <img id="documentIconImg">
                         </div>
                         <hr>
-                        <div id="windSpeed" class="bottomDetails">
-
-                        </div>
-                        <div id="humidity" class="buttomDetails">
-
-                        </div>
-
+                        <div id="windSpeed" class="bottomDetails"></div>
+                        <div id="humidity" class="buttomDetails"></div>
                     </div>
                 </div>
             </div>
